...
        title = view.title.ifBlank { "Call sheet" },
        onDismiss = { onEvent(CallSheetEvent.ClosePdf) },
        visible = true,
        scrollable = false,
        actions = {
            ZillitButton(
                text = "Close",
                onClick = { onEvent(CallSheetEvent.ClosePdf) },
                variant = ButtonVariant.Tertiary,
            )
        },
    ) {
        if (view.loading) {
...
